Revert alignment fix from earlier that is no longer necessary

--- a/app/assets/stylesheets/submissions.css.less
+++ b/app/assets/stylesheets/submissions.css.less
@@ -160,10 +160,6 @@
     display: flex;
 
     .switch-buttons {
-      .btn {
-        top: -1px;
-      }
-
       span {
         margin-right: .5em;
       }
